Moved app to separate module, api updates
